--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rast",
-  "version": "0.0.0",
-  "description": "Small description for rast goes here",
+  "version": "0.1.0",
+  "description": "Rast Enerji Sistemleri Web Uygulaması",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -16,7 +16,7 @@
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Ozan Müyesseroğlu <ozanmuyes@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
@@ -33,8 +33,11 @@
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^1.2.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "1.13.15",
+    "ember-data": "^2.3.3",
     "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4"
+    "ember-export-application-global": "^1.0.4",
+    "ember-inflector": "^1.9.4",
+    "ember-cli-document-title": "0.3.0",
+    "ember-cli-sass": "^5.2.1"
   }
 }
