--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "jquery": "1.11.3",
     "loader.js": "ember-cli/loader.js#3.5.0",
     "qunit": "~1.20.0",
-    "bootstrap-sass": "~3.3.6",
+    "bootstrap": "~3.3.6",
     "font-awesome": "fontawesome#~4.5.0"
   }
 }
