--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rast",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Rast Enerji Sistemleri Web Uygulaması",
   "private": true,
   "directories": {
@@ -39,5 +39,6 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-inflector": "^1.9.4",
+    "ember-resize": "0.0.10"
   }
 }
